correction for pwg 2.4 : truncate name and description no background image for H3
git-svn-id: http://piwigo.org/svn/extensions/flop_mauve@17795 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/current/theme.css
+++ b/current/theme.css
@@ -91,7 +91,7 @@ BODY#theCategoryPage #the_page {
 BODY#thePicturePage #theHeader {
 	background-image: url(images/bk_ground.gif);
 }
-H3, #the_page, #imageHeaderBar, #imageToolBar A:hover, .row1 {
+#the_page, #imageHeaderBar, #imageToolBar A:hover, .row1 {
 	background-image: url(images/bk_ground.gif);
 }
 #menubar DL, #content, #imageToolBar, .header_notes, .content {
